tests/src/frontend/typechecking/invalid/readonly_lambda_7.sk
class Foo<T: () -> Int>(v: T)

fun no(foo: readonly Foo<() -> Int>): void {
  _ = foo.v()
}

fun test(): void {
  no(freeze(Foo<() -> Int>(() -> 0)))
}
